Fix spacing for settings page, fix register image

--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -108,6 +108,10 @@
 						td {
 							white-space: nowrap;
 
+							select.form-control {
+								width: inherit;
+							}
+
 							&.class-name {
 								input {
 									width: 8rem;
